--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-redux": "^9.2.0",
+    "swiper": "^11.2.10",
     "yup": "^1.7.0"
   },
   "devDependencies": {
