--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.8.2",
+    "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.11.0",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
@@ -17,6 +17,7 @@
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "swiper": "^11.2.10",
     "yup": "^1.7.0"
